@@ -83,14 +83,12 @@ convertDatasets <- function(flatModel, model) {
 				!is.na(objective@thresholds)) {
 				threshNames <- objective@thresholds
 				observed <- convertThresholds(flatModel, model, dataName, threshNames)
-				flatModel@datasets[[dataName]]@observed <- observed
-#			} else if (!is.na(dataName)) {
-#				data <- flatModel@datasets[[dataName]]@observed
-#				if (is.data.frame(data)) {
-#					warning(paste("Converting data frame to numeric matrix",
-#					"in model", omxQuotes(flatModel@name)), call. = FALSE)
-#					flatModel@datasets[[dataName]]@observed <- data.matrix(data)
-#				}
+				flatModel@datasets[[dataName]]@observed <- convertIntegerColumns(observed)
+			} else if (!is.na(dataName)) {
+				observed <- flatModel@datasets[[dataName]]@observed
+				if (is.data.frame(observed)) {
+					flatModel@datasets[[dataName]]@observed <- convertIntegerColumns(observed)
+				}
 			}
 		}	
 	}
